worked for bug fixing on header action overflow hidden issue

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -327,7 +327,6 @@
         pointer-events: none;
         opacity: 0;
         transition: var(--transition-1);
-        display: none;
         &.active {
           pointer-events: all;
           opacity: 0.8;
